# Agentic_Language_Translation_Tool

./: .gitignore  README.md  pyproject.toml
src/agentic_language_translation_tool/: __init__.py  adversarial_qa.py  cli.py  extractors.py  glossary.py  io.py  models.py  tasks.py  workflows.py  workspace.py
tests/: test_adversarial_qa.py  test_docx_pdf_support.py  test_explicit_workflow.py  test_extractors.py  test_glossary.py  test_io.py  test_models.py  test_tasks.py  test_workflows.py  test_workspace.py
