[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-language-translation-tool"
version = "0.1.0"
description = "Workspace-first helper toolkit for agentic document translation workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "markdown-it-py>=3.0.0",
    "platformdirs>=4.2.2",
    "pydantic>=2.7.4",
    "pymupdf>=1.24.5",
    "python-docx>=1.1.2",
    "rapidfuzz>=3.9.3",
    "regex>=2024.5.15",
    "rich>=13.7.1",
    "tiktoken>=0.7.0",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
altt = "agentic_language_translation_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_language_translation_tool"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "-p",
    "no:cacheprovider",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["docx", "docx.*", "fitz"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = []
